--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/*
+*
+* Global 
+*
+*/
+
 *,
 *::before,
 *::after {
@@ -12,6 +18,11 @@
     clear: both;
 }
 
+.hero-image {
+    width: 100%;
+    height: 100%;
+}
+
 .container {
     width: 80vw;
     margin: auto;
@@ -22,44 +33,54 @@
     padding-bottom: 80px;
 }
 
+
+/*
+*
+* header 
+*
+*/
+
 .header {
-    overflow: hidden;
+    z-index: 1;
+    width: 100%;
+    height: 100px;
+    position: absolute;
 }
 
-.header .hero-image-holder .navbar {
+.header .navbar {
     width: 100%;
     height: 100px;
     top: 0;
     left: 0;
 }
 
-.navbar .logo-container {
+.header .navbar .logo-container {
     width: 40%;
     float: left;
     height: inherit;
 }
 
-.navbar .logo-container .logo-holder {
+.header .navbar .logo-container .logo-holder {
     align-items: center;
     height: inherit;
     display: flex;
     margin-left: 10%;
 }
 
-.navbar .logo-container .logo-holder h2,
-.navbar .list-container ul li a {
+.header .navbar .logo-container .logo-holder h2,
+.header .navbar .list-container ul li a {
     color: white;
     opacity: .7;
 }
 
-.navbar .list-container {
+.header .navbar .list-container {
     width: 60%;
     display: block;
     float: left;
     height: inherit;
 }
 
-.navbar .list-container .list-holder {
+.header .navbar .list-container .list-holder {
     height: inherit;
     display: flex;
     float: right;
@@ -67,32 +88,52 @@
     align-items: center;
 }
 
-.navbar .list-container ul {
+.header .navbar .list-container ul {
     list-style: none;
     padding: 10px 0;
 }
 
-.navbar .list-container ul li {
+.header .navbar .list-container ul li {
     display: inline;
     padding: 20px 0;
 }
 
-.navbar .list-container ul li a {
+.header .navbar .list-container ul li a {
     padding: 20px;
     text-decoration: none;
     text-transform: capitalize;
 }
 
-.navbar .list-container ul li a:hover {
+.header .navbar .list-container ul li a:hover {
     opacity: 1;
 }
 
-.header-text-container {
+
+/*
+*
+* hero section 
+*
+*/
+
+.hero-section .hero-image-holder {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/jerry-zhang-3ABIkpIS8Ec-unsplash.jpg");
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center center;
+    position: relative;
+    background-repeat: no-repeat;
+}
+
+.hero-section .hero-text-container {
     height: 100%;
     display: flex;
 }
 
-.header-text-container .text-holder {
+.hero-section .hero-text-container .text-holder {
     position: absolute;
     text-align: center;
     top: 50%;
@@ -100,15 +141,21 @@
     left: 50%;
 }
 
-.text-holder h1,
-.text-holder p,
-.text-holder a {
+.hero-section .text-holder h1 {
+    opacity: .7;
+    color: white;
+    font-size: 3em;
+    margin-top: 0;
+    margin-bottom: 0.5em;
+}
+
+.hero-section .text-holder p {
     padding-bottom: 20px;
     opacity: .7;
     color: white;
 }
 
-.text-holder a {
+.hero-section .text-holder a {
     display: block;
     width: 15rem;
     padding: 1em;
@@ -123,25 +170,7 @@
     border-radius: 20px;
 }
 
-.text-holder a:hover {
+.hero-section .text-holder a:hover {
     opacity: 1;
     border: 3px solid rgba(255, 255, 255, 1);
-}
-
-.hero-image-holder {
-    height: 100vh;
-    width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/jerry-zhang-3ABIkpIS8Ec-unsplash.jpg");
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-position: center center;
-    position: relative;
-    background-repeat: no-repeat;
-}
-
-.hero-image {
-    width: 100%;
-    height: 100%;
 }
