--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@
     padding: 0;
 }
 
+body {
+    scroll-behavior: smooth;
+}
+
 .clear {
     clear: both;
 }
@@ -43,15 +47,16 @@
 .header {
     z-index: 1;
     width: 100%;
-    height: 100px;
+    height: 80px;
     position: absolute;
 }
 
 .header .navbar {
     width: 100%;
-    height: 100px;
+    height: 80px;
     top: 0;
     left: 0;
+    position: fixed;
 }
 
 .header .navbar .logo-container {
@@ -80,7 +85,7 @@
     height: inherit;
 }
 
-.header .navbar .list-container .list-holder {
+.header .navbar .list-container .navbar-list {
     height: inherit;
     display: flex;
     float: right;
@@ -93,19 +98,27 @@
     padding: 10px 0;
 }
 
-.header .navbar .list-container ul li {
-    display: inline;
-    padding: 20px 0;
-}
-
 .header .navbar .list-container ul li a {
     padding: 20px;
+    font-size: 18px;
     text-decoration: none;
     text-transform: capitalize;
 }
 
 .header .navbar .list-container ul li a:hover {
     opacity: 1;
+}
+
+#check {
+    display: none;
+}
+
+.bar-icon-label {
+    font-size: 30px;
+    opacity: .7;
+    color: white;
+    padding: 15px;
+    cursor: pointer;
 }
 
 
@@ -159,19 +172,229 @@
 .hero-section .text-holder a {
     display: block;
     width: 15rem;
-    padding: 1em;
+    padding: .5em;
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
-    color: white;
+    color: rgba(255, 255, 255, 0.5);
     text-transform: capitalize;
     text-decoration: none;
     font-size: 1.5em;
     border: 3px solid rgba(255, 255, 255, 0.5);
-    border-radius: 20px;
 }
 
 .hero-section .text-holder a:hover {
     opacity: 1;
+    background-color: rgba(169, 169, 169, 0.234);
+    color: white;
     border: 3px solid rgba(255, 255, 255, 1);
 }
+
+
+/*
+*
+* about us section 
+*
+*/
+
+.hero-section .text-holder h1 {
+    font-size: 1.9em;
+}
+
+
+/*
+*
+*   ============================  media query   ============================
+* 
+*/
+
+
+/*
+*
+*   Extra small devices (phones, 600px and down)
+* 
+*/
+
+@media only screen and (max-width: 600px) {
+    .header .navbar .logo-container {
+        width: 60%;
+    }
+    .bar-container {
+        display: flex;
+        height: inherit;
+        align-items: center;
+        justify-content: flex-end;
+        padding-right: 20px;
+    }
+    .header .navbar .list-container .navbar-list {
+        height: auto;
+        visibility: hidden;
+        width: 100%;
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 80px;
+    }
+    .responsive .navbar-ul {
+        display: block;
+        visibility: visible;
+        top: 80px;
+        height: auto;
+        background-color: rgb(93, 81, 81);
+        left: 0;
+    }
+    .header .navbar .list-container ul {
+        padding: 0;
+    }
+    .header .navbar .list-container ul li {
+        display: block;
+        padding: 0;
+    }
+    .header .navbar .list-container ul li a:hover {
+        color: white;
+        text-decoration: underline;
+        background-color: rgba(169, 169, 169, 0.234);
+    }
+    .header .navbar .list-container {
+        width: 0;
+    }
+    .header .navbar .list-container ul li a {
+        text-align: center;
+        display: block;
+    }
+}
+
+
+/*
+*
+*   Small devices (portrait tablets and large phones, 600px and up)
+* 
+*/
+
+@media only screen and (min-width: 600px) {
+    .bar-container {
+        display: flex;
+        height: inherit;
+        align-items: center;
+        justify-content: flex-end;
+        padding-right: 20px;
+    }
+    .header .navbar .list-container .navbar-list {
+        height: auto;
+        visibility: hidden;
+        width: 100%;
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 80px;
+    }
+    .responsive .navbar-ul {
+        display: block;
+        visibility: visible;
+        top: 80px;
+        height: auto;
+        background-color: rgb(93, 81, 81);
+        left: 0;
+    }
+    .header .navbar .list-container ul {
+        padding: 0;
+    }
+    .header .navbar .list-container ul li {
+        display: block;
+        padding: 0;
+    }
+    .header .navbar .list-container ul li a:hover {
+        color: white;
+        text-decoration: underline;
+        background-color: rgba(169, 169, 169, 0.234);
+    }
+    .header .navbar .list-container {
+        width: 0;
+    }
+    .header .navbar .list-container ul li a {
+        text-align: center;
+        display: block;
+    }
+}
+
+
+/*
+*
+*   Medium devices (landscape tablets, 768px and up) The navbar toggle appears at this breakpoint
+* 
+*/
+
+@media only screen and (min-width: 768px) {
+    .bar-container {
+        display: none;
+    }
+    .header .navbar .list-container {
+        display: block;
+        width: 60%;
+    }
+    .header .navbar .list-container .navbar-list {
+        height: inherit;
+        display: flex;
+        top: unset;
+        width: auto;
+        position: initial;
+        float: right;
+        margin-right: 10%;
+        align-items: center;
+        visibility: visible;
+        display: flex;
+        left: initial;
+    }
+    .responsive .navbar-ul {
+        background-color: unset;
+    }
+    .header .navbar .list-container ul {
+        padding: 10px 0;
+    }
+    .header .navbar .list-container ul li {
+        display: inline;
+        padding: 20px 0;
+    }
+    .header .navbar .list-container ul li a {
+        display: initial;
+    }
+    .header .navbar .list-container ul li a:hover {
+        background-color: unset
+    }
+}
+
+
+/*
+*
+*    the side navbar till here 
+*
+*/
+
+@media only screen and (min-width: 850px) {}
+
+
+/*
+*
+*   Large devices (laptops/desktops, 992px and up)
+* 
+*/
+
+@media only screen and (min-width: 992px) {}
+
+
+/*
+*
+*   tablet size ends here
+* 
+*/
+
+@media screen and (max-device-width: 1024px) {}
+
+
+/*
+*
+*   Extra large devices (large laptops and desktops, 1200px and up)
+* 
+*/
+
+@media only screen and (min-width: 1200px) {}
