--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     -moz-box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -151,6 +152,7 @@ body {
     position: absolute;
     text-align: center;
     top: 50%;
+    width: 80%;
     transform: translate(-50%, -50%);
     left: 50%;
 }
@@ -197,8 +199,49 @@ body {
 *
 */
 
-.hero-section .text-holder h1 {
-    font-size: 1.9em;
+.about-text {
+    text-align: center;
+}
+
+.about-h2 {
+    line-height: 2;
+    text-transform: capitalize;
+    padding-top: 30px;
+    color: #112940;
+}
+
+.about-p {
+    padding: 30px 0;
+    text-align: left;
+    line-height: 2;
+    color: #112940;
+}
+
+.outer-holder {
+    padding-top: 40px;
+}
+
+.about-card {
+    border-radius: 8px;
+    border-top: 3px solid #428DD9;
+    box-shadow: 0px 0px 10px 0px rgba(214, 214, 214, 1);
+    padding: 20px;
+}
+
+.about-us .about-card-holder .card-image {
+    width: 50%;
+    margin: 0 auto;
+    padding-top: 30px;
+}
+
+.about-card-text h3 {
+    text-align: center;
+    padding-top: 30px;
+    color: #112940;
+}
+
+.about-card-text p {
+    text-align: center;
 }
 
 
@@ -216,6 +259,9 @@ body {
 */
 
 @media only screen and (max-width: 600px) {
+    .hero-section .text-holder h1 {
+        font-size: 1.9em;
+    }
     .header .navbar .logo-container {
         width: 60%;
     }
@@ -240,8 +286,9 @@ body {
         visibility: visible;
         top: 80px;
         height: auto;
-        background-color: rgb(93, 81, 81);
         left: 0;
+        background-color: #444444;
+        box-shadow: 2px 25px 50px rgba(68, 68, 68, 0.8);
     }
     .header .navbar .list-container ul {
         padding: 0;
@@ -261,6 +308,15 @@ body {
     .header .navbar .list-container ul li a {
         text-align: center;
         display: block;
+    }
+    .about-us .container {
+        width: 100%;
+        padding: 20px;
+    }
+    .outer-holder {
+        display: grid;
+        grid-gap: 2rem;
+        grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     }
 }
 
@@ -293,7 +349,8 @@ body {
         visibility: visible;
         top: 80px;
         height: auto;
-        background-color: rgb(93, 81, 81);
+        background-color: #444444;
+        box-shadow: 2px 25px 50px rgba(68, 68, 68, 0.8);
         left: 0;
     }
     .header .navbar .list-container ul {
@@ -314,6 +371,11 @@ body {
     .header .navbar .list-container ul li a {
         text-align: center;
         display: block;
+    }
+    .outer-holder {
+        display: grid;
+        grid-gap: 2rem;
+        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     }
 }
 
