--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,9 @@ body {
 @media screen and (max-device-width: 1024px) {
     .hero-section .hero-image-holder {
         background-size: auto;
+        -webkit-background-size: auto;
+        -moz-background-size: auto;
+        -o-background-size: auto;
     }
 }
 
