--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,11 @@ body {
 *
 */
 
-@media only screen and (min-width: 850px) {}
+@media only screen and (min-width: 850px) {
+    .header .navbar .list-container .navbar-list {
+        margin-right: 10%;
+    }
+}
 
 
 /*
