--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body {
     z-index: 1;
     width: 100%;
     height: 80px;
+    z-index: 10;
     position: absolute;
 }
 
@@ -57,7 +58,9 @@ body {
     height: 80px;
     top: 0;
     left: 0;
+    z-index: 10;
     position: fixed;
+    background-color: #444444;
 }
 
 .header .navbar .logo-container {
@@ -269,13 +272,65 @@ body {
     grid-auto-flow: row;
 }
 
+.destination-image-holder {
+    overflow: hidden;
+}
+
+.background-holder {
+    display: inline-block;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+    transition: all 0s ease-in-out;
+}
+
+.background-holder:hover {
+    transition: all 0s ease-in-out;
+}
+
+.destination-image-holder img {
+    transition: all 0.6s ease-in-out;
+    display: block;
+    position: relative;
+    z-index: 1;
+}
+
+.destination-image-holder img:hover {
+    transform: scale(1.3);
+    z-index: -1;
+}
+
 .seventeen-percent {
     grid-column: span 2;
 }
 
 .destination-image-holder {
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
+    position: relative;
+    display: flex;
+}
+
+.hero-image-text {
+    height: 80px;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 3;
+}
+
+.place-name-text {
+    background-color: #44444480;
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    height: inherit;
+    padding-left: 20px;
+}
+
+.place-name-text h3 {
+    position: absolute;
+    color: white;
+    opacity: .7;
 }
 
 
@@ -360,6 +415,9 @@ body {
     }
     .seventeen-percent {
         grid-column: unset;
+    }
+    .destination-image-holder {
+        height: 300px;
     }
 }
 
