--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,6 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
     scroll-behavior: smooth;
 }
 
@@ -60,7 +57,7 @@ body {
     left: 0;
     z-index: 10;
     position: fixed;
-    background-color: #444444;
+    background-color: #44444473;
 }
 
 .header .navbar .logo-container {
@@ -277,20 +274,17 @@ body {
 }
 
 .background-holder {
-    display: inline-block;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    transition: all 0s ease-in-out;
-}
-
-.background-holder:hover {
-    transition: all 0s ease-in-out;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
 }
 
 .destination-image-holder img {
     transition: all 0.6s ease-in-out;
     display: block;
     position: relative;
-    z-index: 1;
+    z-index: 0;
 }
 
 .destination-image-holder img:hover {
@@ -300,6 +294,7 @@ body {
 
 .seventeen-percent {
     grid-column: span 2;
+    height: 500px;
 }
 
 .destination-image-holder {
@@ -309,16 +304,24 @@ body {
     display: flex;
 }
 
-.hero-image-text {
-    height: 80px;
+.destination-image-holder:hover .hero-image-text {
+    transition: all 0.4s ease-in-out;
     bottom: 0;
+}
+
+.hero-image-text {
+    transition: all 0.6s ease-in-out;
+    height: 80px;
+    bottom: -50%;
     position: absolute;
+    display: block;
     width: 100%;
     z-index: 3;
 }
 
 .place-name-text {
-    background-color: #44444480;
+    background-color: #4444449d;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
     position: relative;
     width: 100%;
     display: flex;
@@ -555,7 +558,7 @@ body {
 * 
 */
 
-@media screen and (max-device-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .hero-section .hero-image-holder {
         background-size: auto !important;
         -webkit-background-size: auto !important;
@@ -566,6 +569,9 @@ body {
         -moz-background-attachment: local !important;
         -o-background-attachment: local !important;
     }
+    .hero-image-text {
+        bottom: 0;
+    }
 }
 
 
@@ -575,4 +581,14 @@ body {
 * 
 */
 
+@media only screen and (min-width: 1200px) {}
+
+
+}
+
+/*
+*
+*   Extra large devices (large laptops and desktops, 1200px and up)
+* 
+*/
 @media only screen and (min-width: 1200px) {}
