--- a/css/style.css
+++ b/css/style.css
@@ -417,6 +417,20 @@
 
 /*
 *
+*   ============================  price section   ============================
+* 
+*/
+
+
+/*
+*
+*   ============================  footer section   ============================
+* 
+*/
+
+
+/*
+*
 *   ============================  media query   ============================
 * 
 */
