--- a/css/style.css
+++ b/css/style.css
@@ -424,21 +424,23 @@
 
 .price-card-container {
     display: grid;
-    grid-gap: 2rem;
+    grid-gap: 3rem;
     padding-top: 60px;
     grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
 }
 
 .price-card {
     background-color: white;
-    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175);
+    /* box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175); */
+    box-shadow: 2px 2px 10px rgba(0, 0, 20, 0.2);
 }
 
 .curved {
     position: relative;
     background: #2c3e50;
     /* height: 50vh; */
-    border-bottom-left-radius: 89% 82%;
+    border-bottom-left-radius: 80% 100%;
+    /* border-bottom-left-radius: 89% 82%; */
     /* border-bottom-right-radius: 50% 42%; */
 }
 
@@ -532,7 +534,7 @@
         font-size: 1.9em;
     }
     .header .navbar .logo-container {
-        width: 60%;
+        width: 70%;
     }
     .bar-container {
         display: flex;
@@ -664,7 +666,7 @@
     .outer-holder {
         display: grid;
         grid-gap: 2rem;
-        grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
     }
 }
 
@@ -740,9 +742,9 @@
 */
 
 @media only screen and (min-width: 992px) {
-    .outer-container-card {
+    .outer-holder {
         margin: 0 auto;
-        /* width: 85%; */
+        grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
     }
 }
 
@@ -776,13 +778,25 @@
 * 
 */
 
-@media only screen and (min-width: 1200px) {}
-
-
-/*
-*
-*   Extra large devices (large laptops and desktops, 1200px and up)
-* 
-*/
-
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+    .container {
+        max-width: 1170px;
+    }
+    .price-card-container {
+        margin: 0 auto;
+        width: 85%;
+    }
+    .outer-holder {
+        margin: 0 auto;
+        width: 90%;
+        grid-template-columns: repeat(auto-fill, minmax(22rem, 1fr));
+    }
+    .destination-cards-container {
+        width: 90%;
+        margin: 0 auto;
+    }
+    .destination-images-container {
+        width: 90%;
+        margin: 0 auto;
+    }
+}
