fixed the scroll issue

--- a/css/style.css
+++ b/css/style.css
@@ -511,6 +511,119 @@
 
 /*
 *
+*   ============================  contact section   ============================
+* 
+*/
+
+#contact {
+    background-color: #cccccc3a;
+}
+
+.contact-form-holder,
+.information-holder {
+    float: left;
+    width: 50%;
+}
+
+.contact-title h2,
+.contact-info h2 {
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+
+/* change it using media query */
+
+.contact-title,
+.information-title {
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.contact-text h2 {
+    padding-bottom: 30px;
+}
+
+.contact-holder {
+    display: inline-block;
+    margin: 0 auto;
+    width: 100%;
+}
+
+
+/* Style inputs with type="text", and textarea */
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+
+/* Style the submit button with a specific background color etc */
+
+input[type="submit"] {
+    background-color: #0B61DF;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    width: 150px;
+    border-radius: 4px;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+
+/* When moving the mouse over the submit button, add a darker green color */
+
+input[type="submit"]:hover {
+    opacity: .6;
+}
+
+
+/* Add a background color and some padding around the form */
+
+.contact-form {
+    border-radius: 5px;
+    background-color: white;
+    -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 20, 0.2);
+    box-shadow: 2px 2px 10px rgba(0, 0, 20, 0.2);
+    padding: 20px;
+}
+
+.contact-form label {
+    color: rgba(0, 0, 0, 0.582);
+}
+
+.hidden {
+    display: none;
+}
+
+.information-list ul {
+    list-style: none;
+    display: block;
+    color: rgba(0, 0, 0, 0.582);
+    opacity: .7;
+}
+
+.information-list ul li {
+    padding: 20px;
+}
+
+.information-list ul li span {
+    padding: 0 20px;
+}
+
+
+/*
+*
 *   ============================  footer section   ============================
 * 
 */
@@ -592,8 +705,13 @@
     .destination .container {
         width: 100vw;
     }
+    .destination-card-holder {
+        grid-template-columns: repeat(auto-fill, minmax( 15rem, 1fr));
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
     .destination-images-container {
-        grid-template-columns: repeat(auto-fill, minmax( 22rem, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax( 15rem, 1fr));
     }
     .seventeen-percent {
         grid-column: unset;
@@ -601,13 +719,20 @@
     .destination-image-holder {
         height: 300px;
     }
-    .destination-card-holder {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-    }
     .card-image-holder {
         border-top-left-radius: 0;
         border-top-right-radius: 0;
+    }
+    .contact-form-holder,
+    .information-holder {
+        float: unset;
+        width: 100%;
+    }
+    .destination-cards-container {
+        padding: 60px 0;
+        display: grid;
+        grid-gap: 1.5rem;
+        grid-template-columns: repeat(auto-fill, minmax( 15rem, 1fr));
     }
 }
 
@@ -667,6 +792,11 @@
         display: grid;
         grid-gap: 2rem;
         grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    }
+    .contact-form-holder,
+    .information-holder {
+        float: unset;
+        width: 100%;
     }
 }
 
@@ -731,6 +861,11 @@
     }
     .header .navbar .list-container ul li a {
         font-size: 18px;
+    }
+    .contact-form-holder,
+    .information-holder {
+        float: left;
+        width: 50%;
     }
 }
 
