--- a/css/style.css
+++ b/css/style.css
@@ -121,8 +121,7 @@
 
 .bar-icon-label {
     font-size: 30px;
-    opacity: .7;
-    color: white;
+    color: whitesmoke;
     padding: 15px;
     cursor: pointer;
 }
@@ -137,7 +136,7 @@
 .hero-section .hero-image-holder {
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/jerry-zhang-3ABIkpIS8Ec-unsplash.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../images/joao-tzanno-_KO9Bs7ESxM-unsplash.jpg");
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -627,7 +626,16 @@ input[type="submit"]:hover {
 .information-list ul li span {
     padding: 0 20px;
     display: inline-flex;
+    color: #428DD9;
+    opacity: .8;
     width: 90%;
+}
+
+.information-list ul li span:hover {
+    opacity: 1;
+    cursor: pointer;
+    font-weight: bold;
+    text-decoration: underline;
 }
 
 
