--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@
 }
 
 .nav-colored {
-    background-color: #035aa6;
+    background-color: #333333;
 }
 
 .nav-transparent {
@@ -652,6 +652,60 @@ input[type="submit"]:hover {
 * 
 */
 
+.copy {
+    display: inline-block;
+    width: 100%;
+}
+
+.copyright {
+    padding: 20px;
+    font-size: 1.1rem;
+    text-align: center;
+    font-weight: bold;
+    color: #333333;
+    padding-top: 40px;
+}
+
+.footer-icons {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.footer-icons .footer-icons-link {
+    color: #333333;
+    margin: 0;
+    width: 50px;
+    height: 50px;
+    padding: 10px;
+    border-radius: 50%;
+    background-color: #ffffff;
+}
+
+.footer-icons .icon-holder {
+    display: flex;
+    margin: auto 10px;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-icons .icon-holder:hover {
+    opacity: .5;
+}
+
+.footer-about-us {
+    width: 60%;
+}
+
+.footer-about-us p {
+    line-height: 1.5;
+    padding: 20px 20px 40px 0;
+}
+
+.follow-us h2 {
+    line-height: 2;
+}
+
 
 /*
 *
@@ -697,7 +751,7 @@ input[type="submit"]:hover {
         left: 0;
         box-shadow: 2px 25px 50px rgba(68, 68, 68, 0.8);
         /* background-color: #5D5252; */
-        background-color: #035aa6;
+        background-color: #333333;
     }
     .header .navbar .list-container ul {
         padding: 0;
@@ -775,6 +829,24 @@ input[type="submit"]:hover {
         text-align: left;
         padding-bottom: 20px;
     }
+    .footer-icons {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+    .footer-about-us {
+        width: 100%;
+    }
+    .footer .follow-us {
+        width: 100%;
+        text-align: center;
+    }
+    .icon-container {
+        display: inline-flex;
+        width: 100%;
+        padding-top: 20px;
+        justify-content: center;
+    }
 }
 
 
@@ -784,7 +856,7 @@ input[type="submit"]:hover {
 * 
 */
 
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 601px) {
     .bar-container {
         display: flex;
         height: inherit;
@@ -808,7 +880,7 @@ input[type="submit"]:hover {
         height: auto;
         box-shadow: 2px 25px 50px rgba(68, 68, 68, 0.8);
         /* background-color: #5D5252; */
-        background-color: #035aa6;
+        background-color: #333333;
         left: 0;
     }
     .header .navbar .list-container ul {
@@ -844,6 +916,28 @@ input[type="submit"]:hover {
     .contact-info h2 {
         text-align: left;
         padding-bottom: 20px;
+    }
+    .footer-icons {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+    .footer-about-us {
+        width: 60%;
+        float: left;
+    }
+    .footer .follow-us {
+        width: 100%;
+        text-align: center;
+    }
+    .icon-container {
+        display: inline-flex;
+        width: 100%;
+        padding-top: 20px;
+        justify-content: center;
+    }
+    .footer-about-us {
+        width: 100%;
     }
 }
 
@@ -930,6 +1024,23 @@ input[type="submit"]:hover {
     .information-list ul li {
         padding: 0 20px 40px 20px;
     }
+    .footer-icons {
+        display: inline-flex;
+        width: 40%;
+        line-height: 2;
+    }
+    .footer-about-us {
+        width: 60%;
+        float: left;
+    }
+    .follow-us h2 {
+        line-height: 2;
+        padding-left: 20px;
+        text-align: left;
+    }
+    .footer-about-us-holder p {
+        width: 80%;
+    }
 }
 
 
@@ -943,6 +1054,10 @@ input[type="submit"]:hover {
     .outer-holder {
         margin: 0 auto;
         grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+    }
+    .footer .follow-us {
+        width: unset;
+        text-align: center;
     }
 }
 
