trying to fix subscribe section

--- a/css/style.css
+++ b/css/style.css
@@ -671,6 +671,13 @@ input[type="submit"]:hover {
     /* background-attachment: fixed; */
 }
 
+.outer-holder-subscribe {
+    height: 40vh;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
 
 /*
 *
