--- a/css/style.css
+++ b/css/style.css
@@ -536,9 +536,53 @@
     color: white;
 }
 
+
+/*
+*
+*   ============================  subscribe section   ============================
+* 
+*/
+
+.subscribe .hero-image-subscribe .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.subscribe .hero-image-subscribe {
+    height: 450px;
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80");
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center center;
+    position: relative;
+    background-repeat: no-repeat;
+    /* background-attachment: fixed; */
+}
+
 .subscribe-data {
     margin: 0 auto;
     text-align: center;
+    display: inline-flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.subscribe-data a {
+    background-color: #035aa6;
+    color: white;
+    opacity: 1;
+    /* height: 30px; */
+    margin-left: 10px;
+    padding: 12px 30px;
+    width: 150px;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 
@@ -600,8 +644,7 @@ textarea {
 
 /* Style the submit button with a specific background color etc */
 
-input[type="submit"],
-.subscribe-data a {
+input[type="submit"] {
     background-color: #035aa6;
     color: white;
     padding: 12px 20px;
@@ -663,56 +706,6 @@ input[type="submit"]:hover {
     cursor: pointer;
     font-weight: bold;
     text-decoration: underline;
-}
-
-
-/*
-*
-*   ============================  subscribe section   ============================
-* 
-*/
-
-
-/* .subscribe .hero-image-subscribe .container {
-    height: 450px;
-}
-
-.subscribe-data-container {
-    height: 40%;
-} */
-
-.subscribe .hero-image-subscribe {
-    height: 450px;
-    width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80");
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-position: center center;
-    position: relative;
-    background-repeat: no-repeat;
-    /* background-attachment: fixed; */
-}
-
-.outer-holder-subscribe {
-    height: 450px;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-.subscribe-data a {
-    background-color: #035aa6;
-    color: white;
-    opacity: 1;
-    font-size: unset;
-    padding: 12px 30px;
-    width: 150px;
-    border-radius: 4px;
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: uppercase;
 }
 
 
