--- a/css/style.css
+++ b/css/style.css
@@ -633,7 +633,7 @@ input[type="text"],
 input[type="email"],
 textarea {
     width: 100%;
-    padding: 12px;
+    padding: 11.5px;
     border: 1px solid #ccc;
     border-radius: 4px;
     margin-top: 6px;
@@ -781,6 +781,15 @@ input[type="submit"]:hover {
     }
     .subscribe-data-container .subscribe-data input {
         margin-bottom: 20px;
+    }
+    .subscribe-data {
+        display: block;
+    }
+    .subscribe-data a {
+        margin-left: 0;
+    }
+    .subscribe-data input[type="email"] {
+        margin-bottom: 40px;
     }
 }
 
@@ -945,6 +954,9 @@ input[type="submit"]:hover {
         width: 60%;
         margin-bottom: 30px;
     }
+    .subscribe-data input[type="email"] {
+        margin: 0;
+    }
 }
 
 
@@ -1040,6 +1052,9 @@ input[type="submit"]:hover {
     .subscribe-data input {
         width: 45%;
         margin-bottom: unset;
+    }
+    .subscribe-data input[type="email"] {
+        margin: 0;
     }
 }
 
