--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,86 @@
 * 
 */
 
+.testimonials {
+    padding: 20px 0;
+}
+
+.testimonial-title-holder {
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80");
+    background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-position: center center;
+    position: relative;
+    background-repeat: no-repeat;
+}
+
+.testimonial-title h2 {
+    text-align: center;
+    opacity: .8;
+    color: whitesmoke;
+}
+
+.testimonials-holder {
+    padding: 40px 0;
+}
+
+.testimonials p {
+    line-height: 1.5;
+    text-align: center;
+    opacity: .8;
+    color: whitesmoke;
+}
+
+.testimonials q {
+    opacity: .8;
+    color: whitesmoke;
+    font-size: 16px;
+}
+
+.testimonials h3,
+.testimonials h5 {
+    padding-top: 0;
+    text-align: center;
+    opacity: .8;
+    color: whitesmoke;
+}
+
+.testimonials h3 {
+    padding-top: 10px;
+}
+
+.testimonials h5 {
+    padding-bottom: 15px;
+}
+
+.testimonials-image {
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
+    border-radius: 50%;
+    position: relative;
+    overflow: hidden;
+    padding: 10px;
+}
+
+.testimonials-image img {
+    min-width: 100%;
+    min-height: 100%;
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    background-size: cover;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 
 /*
 *
@@ -367,6 +447,7 @@
 */
 
 .destination-images-container {
+    padding: 60px 0;
     display: grid;
     grid-gap: 1.5rem;
     grid-template-columns: repeat(auto-fill, minmax( 22rem, 1fr));
@@ -553,7 +634,7 @@
 .subscribe .hero-image-subscribe {
     height: 450px;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1051&q=80");
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -937,6 +1018,12 @@ input[type="submit"]:hover {
         padding-top: 20px;
         justify-content: center;
     }
+    .testimonials p {
+        padding: 10px 0;
+        line-height: 1.5;
+        text-align: center;
+        color: #888888;
+    }
 }
 
 @media only screen and (min-width:450px) and (max-width:600px) {
@@ -1055,6 +1142,12 @@ input[type="submit"]:hover {
     }
     .subscribe-data input[type="email"] {
         margin: 0;
+    }
+    .testimonials p {
+        padding: 10px 0;
+        line-height: 1.5;
+        text-align: center;
+        color: #888888;
     }
 }
 
@@ -1231,5 +1324,20 @@ input[type="submit"]:hover {
     .destination-images-container {
         width: 90%;
         margin: 0 auto;
+    }
+    .testimonials {
+        padding: 20px 0;
+        width: 32%;
+        display: inline-block;
+        margin: 5px;
+    }
+    .testimonials p {
+        padding: 15px 0;
+    }
+    .subscribe .hero-image-subscribe {
+        background-attachment: fixed;
+    }
+    .testimonial-title-holder {
+        background-attachment: fixed;
     }
 }
