--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@
 .hero-section .hero-image-holder {
     height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../images/joao-tzanno-_KO9Bs7ESxM-unsplash.jpg");
+    background-image: url("../images/joao-tzanno-_KO9Bs7ESxM-unsplash.jpg");
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1289,11 +1289,6 @@ input[type="submit"]:hover {
 */
 
 @media screen and (max-width: 1024px) {
-    *,
-    *::before,
-    *::after {
-        scroll-behavior: smooth;
-    }
     .hero-section .hero-image-holder {
         background-size: auto !important;
         -webkit-background-size: auto !important;
