--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@
 
 .about-card {
     border-radius: 8px;
-    border-top: 3px solid #428DD9;
+    border-top: 3px solid #035aa6;
     box-shadow: 0px 5px 10px 0px rgba(214, 214, 214, 1);
     padding: 20px;
 }
@@ -246,14 +246,14 @@
     width: 70%;
     margin: 0 auto;
     padding-top: 30px;
-    border-bottom: 2px solid #428DD9;
+    border-bottom: 2px solid #035aa6;
     padding-bottom: 10px;
 }
 
 .about-card-text h3 {
     text-align: center;
     padding-top: 30px;
-    color: #112940;
+    color: #888888;
 }
 
 .about-card-text p {
