--- a/css/style.css
+++ b/css/style.css
@@ -664,7 +664,7 @@
     background-color: #035aa6;
     color: white;
     opacity: 1;
-    /* height: 30px; */
+    text-align: center;
     margin-left: 10px;
     padding: 12px 30px;
     width: 150px;
