--- a/css/style.css
+++ b/css/style.css
@@ -727,6 +727,7 @@ textarea {
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
+    -webkit-appearance: none;
 }
 
 
@@ -742,6 +743,7 @@ input[type="submit"] {
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
+    -webkit-appearance: none;
 }
 
 
