--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@
     padding: 0;
     font-family: "Montserrat", sans-serif, Helvetica;
     scroll-behavior: smooth;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 .clear {
@@ -744,8 +746,8 @@ input[type="submit"] {
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+    /* -webkit-appearance: none;
+    -moz-appearance: none; */
 }
 
 
