adding loading screen

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 
 body {
     line-height: 1.5;
+    overflow: hidden;
 }
 
 .img-fluid {
@@ -571,6 +572,77 @@ a.footer__icon:hover {
 }
 
 
+/*============================ start loading screen section ============================*/
+
+.loading-screen {
+    top: 0;
+    background-color: #313132;
+    left: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+}
+
+.loading__title {
+    color: var(--white);
+}
+
+.spinner {
+    width: 80px;
+    height: 80px;
+    padding: 20px;
+    border: 5px solid rgba(0, 0, 0, 0.1);
+    border-top-color: rgb(255, 255, 0);
+    border-radius: 50%;
+    animation: my__rotate 1s linear infinite;
+}
+
+@-webkit-keyframes my__rotate {
+    from {
+        transform: rotate(0deg);
+        filter: hue-rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+        filter: hue-rotate(360deg);
+    }
+}
+
+@-moz-keyframes my__rotate {
+    from {
+        transform: rotate(0deg);
+        filter: hue-rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+        filter: hue-rotate(360deg);
+    }
+}
+
+@-o-keyframes my__rotate {
+    from {
+        transform: rotate(0deg);
+        filter: hue-rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+        filter: hue-rotate(360deg);
+    }
+}
+
+@keyframes my__rotate {
+    from {
+        transform: rotate(0deg);
+        filter: hue-rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+        filter: hue-rotate(360deg);
+    }
+}
+
+
 /*
 *
 *   ============================  media query   ============================
@@ -601,35 +673,6 @@ a.footer__icon:hover {
         font-size: 1.5rem;
     }
 }
-
-
-/*
-*
-*   Small devices (portrait tablets and large phones, 600px and up)
-* 
-*/
-
-@media only screen and (min-width: 576px) {}
-
-@media only screen and (min-width: 768px) {}
-
-
-/*
-*
-*    the side navbar till here 
-*
-*/
-
-@media only screen and (min-width: 850px) {}
-
-
-/*
-*
-*   Large devices (laptops/desktops, 992px and up)
-* 
-*/
-
-@media only screen and (min-width: 992px) {}
 
 
 /*
